--- a/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -851,7 +851,7 @@ HierarchicalLODUtilities.TimeStamp=2020.02.12-05.17.25
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1024,8 +1024,8 @@ ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 bConvertScene=True
-bForceFrontXAxis=False
-bConvertSceneUnit=False
+bForceFrontXAxis=True
+bConvertSceneUnit=True
 
 [FBX_Import_UI_Option_FbxSkeletalMeshImportData]
 VertexColorImportOption=Replace
@@ -1095,6 +1095,14 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_albedo_Mat.DefaultMaterial_albedo_Mat;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_normal.DefaultMaterial_normal;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_AO.DefaultMaterial_AO;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_Mat.DefaultMaterial_Mat;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_albedo.DefaultMaterial_albedo;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_metallic.DefaultMaterial_metallic;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial.DefaultMaterial;
+RecentlyPlaced=/Game/ThirdPersonCPP/Models/Scar/Scar.Scar;
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Dance_Worm_Anim.Emote_Dance_Worm_Anim;
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/DanceMoves_Anim.DanceMoves_Anim;
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Yeet_CMM.Emote_Yeet_CMM;
@@ -1107,14 +1115,6 @@ RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_SmoothDrive_CMF.Emote_SmoothDri
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Salute_Female.Emote_Salute_Female;
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_RockPaperScissor_Scissor_CMF.Emote_RockPaperScissor_Scissor_CMF;
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_RockPaperScissor_Rock_CMF.Emote_RockPaperScissor_Rock_CMF;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_RockPaperScissor_Paper_CMF.Emote_RockPaperScissor_Paper_CMF;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Rocket_Rodeo_CMM.Emote_Rocket_Rodeo_CMM;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_RobotDance.Emote_RobotDance;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_PraiseTheStorm_CMM.Emote_PraiseTheStorm_CMM;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_PopRock_CMM.Emote_PopRock_CMM;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Make_It_Rain.Emote_Make_It_Rain;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Kung-Fu_Salute1_CMF.Emote_Kung-Fu_Salute1_CMF;
-RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_IrishJig_Female.Emote_IrishJig_Female;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonCPP/Models/FbxScene_TacticalShotgun
