--- a/FortniteChapter3/Config/DefaultGame.ini
+++ b/FortniteChapter3/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B0E367644DD9A98BA51AACA427DFCB48
-ProjectName=Third Person Game Template
+ProjectName=Fortnite Chapter 3
+
