fixed spawner material refs

--- a/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -893,7 +893,7 @@ ExternalImagePicker.TimeStamp=2020.02.12-05.17.23
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1900,7 +1900,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner.BP_EnemySpawner;
@@ -1925,13 +1925,13 @@ RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Salute_Female.Emote_Salute_Fema
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_RockPaperScissor_Scissor_CMF.Emote_RockPaperScissor_Scissor_CMF;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonCPP/Blueprints/Enemy
-MRUItem1=/Game/ThirdPersonCPP/Materials/Yellow
-MRUItem2=/Game/ThirdPersonCPP/Materials/Red
-MRUItem3=/Game/ThirdPersonCPP/Materials/Green
-MRUItem4=/Game/ThirdPersonCPP/Blueprints/Weapon
-MRUItem5=/Game/ThirdPersonCPP/Maps/DavidKTestMap
-MRUItem6=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner
+MRUItem0=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner
+MRUItem1=/Game/ThirdPersonCPP/Blueprints/Enemy
+MRUItem2=/Game/ThirdPersonCPP/Materials/Yellow
+MRUItem3=/Game/ThirdPersonCPP/Materials/Red
+MRUItem4=/Game/ThirdPersonCPP/Materials/Green
+MRUItem5=/Game/ThirdPersonCPP/Blueprints/Weapon
+MRUItem6=/Game/ThirdPersonCPP/Maps/DavidKTestMap
 MRUItem7=/Game/Materials/Yellow
 MRUItem8=/Game/Materials/Red
 MRUItem9=/Game/Materials/Green
