--- a/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,8 +115,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/ThirdPersonCPP/Maps/DavidKTestMap
+MRUItem1=/Game/ThirdPersonCPP/Maps/MainMenu
 MRUItem2=/Game/ThirdPersonCPP/Maps/DavidLiuMap
+MRUItem3=/Game/ThirdPersonCPP/Maps/DavidKTestMap
 
 [/Script/UnrealEd.FbxImportUI]
 bImportAnimations=True
@@ -173,8 +174,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-FortniteChapter3.TimeStamp=2020.02.18-16.34.20
-FortniteChapter3.LastCompileMethod=External
+FortniteChapter3.TimeStamp=2020.02.18-17.39.21
+FortniteChapter3.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.02.12-05.17.30
 PakFile.LastCompileMethod=External
 RSA.TimeStamp=2020.02.12-05.17.32
@@ -891,6 +892,14 @@ BlueprintCompilerCppBackend.TimeStamp=2020.02.12-05.17.18
 BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2020.02.12-05.17.23
 ExternalImagePicker.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2020.02.03-13.26.10
+SequencerWidgets.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2020.02.03-13.25.59
+AnimationEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2020.02.03-13.26.11
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2020.02.03-13.26.08
+PinnedCommandList.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1836,6 +1845,36 @@ Landscape.Replication=True
 Landscape.Input=True
 Landscape.Actor=True
 BP_MainEnemySpawner_C.TransformCommon=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Animation=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Sampling=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Input=True
+Actor.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1930,8 +1969,8 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [PlacementMode]
-RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner.BP_MainEnemySpawner;
 RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner.BP_EnemySpawner;
+RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner.BP_MainEnemySpawner;
 RecentlyPlaced=/Script/FortniteChapter3.EnemySpawner;
 RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/ThirdPersonCPP/Models/TacticalShotgun/TacticalShotgun_Mat.TacticalShotgun_Mat;
@@ -1953,25 +1992,25 @@ RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Salute_Female.Emote_Salute_Fema
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner
-MRUItem2=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner
-MRUItem3=/Game/ThirdPersonCPP/Blueprints/Enemy
-MRUItem4=/Game/ThirdPersonCPP/Materials/Yellow
-MRUItem5=/Game/ThirdPersonCPP/Materials/Red
-MRUItem6=/Game/ThirdPersonCPP/Materials/Green
-MRUItem7=/Game/ThirdPersonCPP/Blueprints/Weapon
-MRUItem8=/Game/ThirdPersonCPP/Maps/DavidKTestMap
-MRUItem9=/Game/Materials/Yellow
-MRUItem10=/Game/Materials/Red
-MRUItem11=/Game/Materials/Green
-MRUItem12=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem13=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_001
-MRUItem14=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-MRUItem15=/Game/ThirdPersonCPP/Maps/DavidLiuMap
-MRUItem16=/Game/ThirdPersonCPP/Blueprints/ARPickupUI
-MRUItem17=/Game/ThirdPersonCPP/Blueprints/Bullet
-MRUItem18=/Game/ThirdPersonCPP/Blueprints/SniperPickupUI
-MRUItem19=/Game/ThirdPersonCPP/Blueprints/ShotgunPickupUI
+MRUItem1=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonCPP/Emotes/DanceMoves
+MRUItem3=/Game/ThirdPersonCPP/Emotes/DanceMoves_Anim
+MRUItem4=/Game/ThirdPersonCPP/Maps/MainMenu
+MRUItem5=/Game/ThirdPersonCPP/Blueprints/MainMenu
+MRUItem6=/Game/ThirdPersonCPP/Maps/DavidLiuMap
+MRUItem7=/Game/ThirdPersonCPP/Maps/DavidKTestMap
+MRUItem8=/Game/ThirdPersonCPP/Blueprints/Enemy
+MRUItem9=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner
+MRUItem10=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner
+MRUItem11=/Game/ThirdPersonCPP/Materials/Yellow
+MRUItem12=/Game/ThirdPersonCPP/Materials/Red
+MRUItem13=/Game/ThirdPersonCPP/Materials/Green
+MRUItem14=/Game/ThirdPersonCPP/Blueprints/Weapon
+MRUItem15=/Game/Materials/Yellow
+MRUItem16=/Game/Materials/Red
+MRUItem17=/Game/Materials/Green
+MRUItem18=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem19=/Game/ThirdPersonCPP/Models/Scar/DefaultMaterial_001
 
 [AssetEditorToolkitTabLocation]
 /Game/BP/DanceMoves_Anim_Blueprint.DanceMoves_Anim_Blueprint=1
@@ -2017,6 +2056,8 @@ MRUItem19=/Game/ThirdPersonCPP/Blueprints/ShotgunPickupUI
 /Game/ThirdPersonCPP/Materials/Red.Red=1
 /Game/ThirdPersonCPP/Materials/Yellow.Yellow=1
 /Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner.BP_MainEnemySpawner=1
+/Game/ThirdPersonCPP/Blueprints/MainMenu.MainMenu=1
+/Game/ThirdPersonCPP/Emotes/DanceMoves.DanceMoves=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2223,9 +2264,9 @@ FrameNumberDisplayFormat=Seconds
 
 [DetailPropertyExpansion]
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
-Object="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+Widget=
+Visual=
+Object=
 Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -2234,10 +2275,10 @@ StaticMeshActor=
 Weapon_C=
 Dead_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
@@ -2251,6 +2292,8 @@ Pawn=
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[34]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2279,6 +2322,8 @@ Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2370,6 +2415,7 @@ FloatProperty=ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.
 BoxComponent=BoxComponent.Rendering.TextureStreaming,BoxComponent.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 Enemy_C=
+MainMenu_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
