--- a/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1875,6 +1875,16 @@ Actor.Replication=True
 Actor.Collision=True
 Actor.Input=True
 Actor.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Lighting=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Physics=True
+LightmassImportanceVolume.VirtualTexture=True
+LightmassImportanceVolume.Tags=True
+LightmassImportanceVolume.Activation=True
+LightmassImportanceVolume.Cooking=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
