--- a/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FortniteChapter3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1979,8 +1979,8 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [PlacementMode]
-RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner.BP_EnemySpawner;
 RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner.BP_MainEnemySpawner;
+RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner.BP_EnemySpawner;
 RecentlyPlaced=/Script/FortniteChapter3.EnemySpawner;
 RecentlyPlaced=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/ThirdPersonCPP/Models/TacticalShotgun/TacticalShotgun_Mat.TacticalShotgun_Mat;
@@ -2001,17 +2001,17 @@ RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_SmoothDrive_CMF.Emote_SmoothDri
 RecentlyPlaced=/Game/ThirdPersonCPP/Emotes/Emote_Salute_Female.Emote_Salute_Female;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonCPP/Emotes/DanceMoves
-MRUItem3=/Game/ThirdPersonCPP/Emotes/DanceMoves_Anim
-MRUItem4=/Game/ThirdPersonCPP/Maps/MainMenu
-MRUItem5=/Game/ThirdPersonCPP/Blueprints/MainMenu
-MRUItem6=/Game/ThirdPersonCPP/Maps/DavidLiuMap
-MRUItem7=/Game/ThirdPersonCPP/Maps/DavidKTestMap
-MRUItem8=/Game/ThirdPersonCPP/Blueprints/Enemy
-MRUItem9=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner
-MRUItem10=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner
+MRUItem0=/Game/ThirdPersonCPP/Blueprints/BP_MainEnemySpawner
+MRUItem1=/Game/ThirdPersonCPP/Blueprints/BP_EnemySpawner
+MRUItem2=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/ThirdPersonCPP/Emotes/DanceMoves
+MRUItem5=/Game/ThirdPersonCPP/Emotes/DanceMoves_Anim
+MRUItem6=/Game/ThirdPersonCPP/Maps/MainMenu
+MRUItem7=/Game/ThirdPersonCPP/Blueprints/MainMenu
+MRUItem8=/Game/ThirdPersonCPP/Maps/DavidLiuMap
+MRUItem9=/Game/ThirdPersonCPP/Maps/DavidKTestMap
+MRUItem10=/Game/ThirdPersonCPP/Blueprints/Enemy
 MRUItem11=/Game/ThirdPersonCPP/Materials/Yellow
 MRUItem12=/Game/ThirdPersonCPP/Materials/Red
 MRUItem13=/Game/ThirdPersonCPP/Materials/Green
@@ -2276,7 +2276,7 @@ FrameNumberDisplayFormat=Seconds
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -2285,10 +2285,10 @@ StaticMeshActor=
 Weapon_C=
 Dead_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
